--- a/site/.forestry/settings.yml
+++ b/site/.forestry/settings.yml
@@ -2,7 +2,7 @@
 new_page_extension: md
 auto_deploy: false
 admin_path: "/admin/"
-webhook_url: 
+webhook_url:
 sections:
 - type: directory
   path: site/content/products
@@ -12,7 +12,7 @@ sections:
 upload_dir: demo-media
 public_path: ''
 front_matter_path: ''
-use_front_matter_path: 
+use_front_matter_path:
 file_template: ":filename:"
 build:
   preview_command: hugo -E -F -D -b $DEPLOY_URL -d public
@@ -23,8 +23,8 @@ build:
   publish_env:
   - HUGO_ENV=production
   - HUGO_VERSION=0.38.1
-  preview_output_directory: public
-  output_directory: public
+  preview_output_directory: /public
+  output_directory: /public
   instant_preview_command: hugo server -D -E -F --port 8080 --bind 0.0.0.0 --renderToDisk
     -d public
 version: 0.38.1
